refactor: PlatoDialog MainViewModel에서 관리하도록 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlatoCalendar">
         <activity
-            android:name="pusan.university.plato_calendar.presentation.PlatoCalendarActivity"
+            android:name="pusan.university.plato_calendar.presentation.main.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/Theme.PlatoCalendar">
