--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name="pusan.university.plato_calendar.presentation.main.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:theme="@style/Theme.PlatoCalendar">
+            android:theme="@style/Theme.PlatoCalendar.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
